# pystatpower

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  README-en.md  README-zh.md  README.md  codecov.yml  cspell.json  main.py  mkdocs.yml  pyproject.toml  renovate.json  requirements-dev.txt  requirements.txt  setup.py  zensical.toml
.github/: labeler.yml  release.yml
.github/scripts/: label.js
.github/workflows/: black.yml  check.yml  codeql.yml  label.yml  labeler.yml  lint-pr-title.yml  pr-agent.yml  pytest.yml  pytest_full.yml  release.yml  sphinx.yml  test.yml
docs/: api.md  index.md  requirements.txt  roadmap.md  theory.md
docs/algorithms/correlation/: ci.md  inequality.md
docs/algorithms/mean/independent/: ci.md  inequality.md  noninferiority.md  superiority.md
docs/algorithms/mean/single/: ci.md  inequality.md  noninferiority.md  superiority.md
docs/algorithms/misc/: observe_at_least_one_event.md
docs/algorithms/proportion/independent/: ci.md  inequality.md  noninferiority.md  superiority.md
docs/algorithms/proportion/single/: ci.md  equivalence.md  inequality.md  noninferiority.md  superiority.md
docs/api/: exceptions.md  index.md
docs/api/correlation/: ci.md  inequality.md
docs/api/mean/independent/: ci.md  inequality.md  noninferiority.md  superiority.md
docs/api/mean/single/: ci.md  inequality.md  noninferiority.md  superiority.md
docs/api/misc/: observe_at_least_one_event.md
docs/api/proportion/independent/: ci.md  inequality.md  noninferiority.md  superiority.md
docs/api/proportion/single/: ci.md  equivalence.md  inequality.md  noninferiority.md  superiority.md
docs/models/correlation/: ci.md  difference.md  inequality.md
docs/models/mean/independent/: inequality.md  noninferiority.md  superiority.md
docs/models/mean/single/: ci.md  inequality.md
docs/models/proportion/: single.md
docs/models/proportion/independent/: ci.md  inequality.md  noninferiority.md  superiority.md
docs/models/proportion/single/: ci.md  difference.md  equivalence.md  inequality.md  noninferiority.md
docs/overrides/: 404.html
docs/source/: changelog.md  conf.py  index.md  license.md  quickstart.md
docs/source/api/: index.md  numeric.md  option.md
docs/source/api/models/: index.md  one_proportion.md  two_proportion.md
docs/source/details/: index.md
docs/stylesheets/: extra.css
openpower/: utils.py
openpower/procedures/: __init__.py  one_sample_proportion.py
src/pystatpower/: __init__.py  _constant.py  _math_utils.py  basic.py  exceptions.py  interval.py  numeric.py  option.py  restrict.py
src/pystatpower/core/: numbers.py
src/pystatpower/correlation/: __init__.py  ci.py  inequality.py
src/pystatpower/mean/: __init__.py
src/pystatpower/mean/independent/: __init__.py  _power.py  _verify.py  ci.py  inequality.py  noninferiority.py  superiority.py
src/pystatpower/mean/single/: __init__.py  _power.py  ci.py  inequality.py  noninferiority.py  superiority.py
src/pystatpower/misc/: __init__.py  bayes.py  observe_at_least_one_event.py
src/pystatpower/models/: __init__.py  one_proportion.py  two_proportion.py
src/pystatpower/models/correlation/: __init__.py  ci.py  difference.py  inequality.py
src/pystatpower/models/mean/: __init__.py
src/pystatpower/models/mean/independent/: __init__.py  inequality.py  noninferiority.py  superiority.py
src/pystatpower/models/mean/single/: __init__.py  ci.py  inequality.py
src/pystatpower/models/proportion/: __init__.py
src/pystatpower/models/proportion/independent/: __init__.py  ci.py  inequality.py  noninferiority.py  superiority.py
src/pystatpower/models/proportion/single/: __init__.py  ci.py  difference.py  equivalence.py  inequality.py  noninferiority.py  superiority.py
src/pystatpower/procedures/: __init__.py  one_proportion.py  one_sample_proportion.py  three_proportion.py  two_proportion.py
src/pystatpower/proportion/: __init__.py
src/pystatpower/proportion/independent/: __init__.py  _power.py  ci.py  inequality.py  noninferiority.py  superiority.py
src/pystatpower/proportion/paired/: __init__.py
src/pystatpower/proportion/single/: __init__.py  _power.py  ci.py  equivalence.py  inequality.py  noninferiority.py  superiority.py
tests/: conftest.py  models.py  ruff.toml  smoke_test.py  test_basic.py  test_math_utils.py  test_numeric.py  test_option.py
tests/test_correlation/: test_ci.py  test_inequality.py
tests/test_mean/: __init__.py
tests/test_mean/test_independent/: test_ci.py  test_inequality.py  test_noninferiority.py  test_superiority.py
tests/test_mean/test_single/: test_ci.py  test_inequality.py  test_noninferiority.py  test_superiority.py
tests/test_misc/: test_observe_at_least_one_event.py
tests/test_models/: test_one_proportion.py  test_two_proportion.py
tests/test_models/test_correlation/: test_ci.py  test_difference.py  test_inequality.py
tests/test_models/test_mean/test_independent/: test_inequality.py  test_noninferiority.py  test_superiority.py
tests/test_models/test_mean/test_single/: test_ci.py  test_inequality.py
tests/test_models/test_proportion/test_independent/: test_ci.py  test_inequality.py  test_noninferiority.py  test_superiority.py
tests/test_models/test_proportion/test_independent/test_noninferiority/: test_size.py
tests/test_models/test_proportion/test_independent/test_superiority/: test_size.py
tests/test_models/test_proportion/test_single/: test_ci.py  test_difference.py  test_equivalence.py  test_inequality.py  test_noninferiority.py  test_superiority.py
tests/test_models/test_proportion/test_single/test_ci/: test_size.py
tests/test_models/test_proportion/test_single/test_difference/: test_size.py
tests/test_procedures/: test_one_proportion.py  test_one_sample_proportion.py  test_two_proportion.py
tests/test_proportion/test_independent/: test_ci.py  test_inequality.py  test_noninferiority.py  test_superiority.py
tests/test_proportion/test_single/: __init__.py  test_ci.py  test_equivalence.py  test_inequality.py  test_noninferiority.py  test_superiority.py
(+4 files in other folders)
