# build configuration
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pystatpower"
version = "0.0.4"
description = "A Power Analysis Toolkit for Python"
license = { text = "GPL-3.0" }
requires-python = ">=3.11"
authors = [
    { name = "Snoopy1866", email = "pystatpower@gmail.com" },
]
keywords = [
    "mathematics",
    "statistics",
    "power analysis",
    "sample size",
    "power",
    "hypothesis",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = ["scipy>=1.16.0"]
readme = { file = "README.md", content-type = "text/markdown" }

[project.urls]
Homepage = "https://github.com/Snoopy1866/pystatpower"
Documentation = "https://github.com/Snoopy1866/pystatpower/blob/main/README.md"
Repository = "https://github.com/Snoopy1866/pystatpower.git"
Issues = "https://github.com/Snoopy1866/pystatpower/issues"
Changelog = "https://github.com/Snoopy1866/pystatpower/blob/main/CHANGELOG.md"

# setuptools configuration
[tool.setuptools.dynamic]
version = { attr = "pystatpower.__version__" }

# pytest configuration
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q -l --tb=auto --color=yes"
testpaths = ["tests"]
pythonpath = ["src"]
verbosity_test_cases = 2
verbosity_assertions = 2

# ruff configuration
[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
extend-select = ["I"]

[tool.ruff.lint.isort]
known-local-folder = ["src"]
lines-between-types = 1

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.3.5",
    "pytest-cov>=7.0.0",
    "ruff>=0.9.9",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-git-committers-plugin-2>=2.5.0",
    "mkdocs-git-revision-date-localized-plugin>=1.5.1",
    "mkdocs-include-markdown-plugin>=7.2.1",
    "mkdocs-material>=9.7.6",
]
