# build configuration
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pystatpower"
version = "0.0.6"
description = "A Power Analysis Toolkit for Python"
license = { text = "GPL-3.0" }
requires-python = ">=3.10"
authors = [
    { name = "Snoopy1866", email = "pystatpower@gmail.com" }
]
keywords = [
    "statistics",
    "sample size",
    "power analysis",
    "mathematics"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Mathematics"
]
dependencies = [
    "scipy>=1.7.2,<1.16;python_version=='3.10'",
    "scipy>=1.10.1;python_version=='3.11'",
    "scipy>=1.11.3;python_version=='3.12'",
    "scipy>=1.15.0;python_version=='3.13'",
    "scipy>=1.16.1;python_version=='3.14'"
]
readme = { file = "README.md", content-type = "text/markdown" }

[project.urls]
Homepage = "https://github.com/Snoopy1866/pystatpower"
Documentation = "https://pystatpower.readthedocs.io/"
Repository = "https://github.com/Snoopy1866/pystatpower.git"
Issues = "https://github.com/Snoopy1866/pystatpower/issues"

# setuptools configuration
[tool.setuptools.dynamic]
version = { attr = "pystatpower.__version__" }

# pytest configuration
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --verbosity=0 -l --tb=auto --color=yes"
testpaths = ["tests"]
pythonpath = ["src"]

# ruff configuration
[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
extend-select = ["I"]

[tool.ruff.lint.isort]
known-local-folder = ["src"]
lines-between-types = 1

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.14"
]
docs = [
    "mkdocs-autorefs>=1.4.4",
    "mkdocstrings-python>=2.0.3",
    "zensical>=0.0.43"
]
