# build configuration
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pystatpower"
version = "0.0.7"
description = "A Power Analysis Toolkit for Python"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    { name = "Snoopy1866", email = "pystatpower@gmail.com" }
]
keywords = [
    "statistics",
    "sample size",
    "power analysis",
    "mathematics"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Mathematics"
]
dependencies = [
    "scipy>=1.7.2,<=1.15.3;python_version=='3.10'",
    "scipy>=1.10.1,<=1.17.1;python_version=='3.11'",
    "scipy>=1.11.3;python_version=='3.12'",
    "scipy>=1.15.0;python_version=='3.13'",
    "scipy>=1.16.1;python_version=='3.14'"
]
readme = { file = "README.md", content-type = "text/markdown" }

[project.urls]
Homepage = "https://github.com/Snoopy1866/pystatpower"
Documentation = "https://pystatpower.readthedocs.io/"
Repository = "https://github.com/Snoopy1866/pystatpower.git"
Issues = "https://github.com/Snoopy1866/pystatpower/issues"

# setuptools configuration
[tool.setuptools.dynamic]
version = { attr = "pystatpower.__version__" }

# pytest configuration
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --verbosity=0 -l --tb=auto --color=yes"
testpaths = ["tests"]
pythonpath = ["src"]

# ruff configuration
[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
extend-select = [
    "ERA",    # eradicate
    "YTT",    # flake8-2020
    "B",      # flake8-bugbear
    "S",      # flake8-bandit
    "A",      # flake8-builtins
    "BLE",    # flake8-blind-except
    "COM818", # flake8-commas - Trailing comma on bare tuple prohibited
    "C4",     # flake8-comprehensions
    "EM",     # flake8-errmsg
    "T10",    # flake8-debugger
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "INP",    # flake8-no-pep420
    "PIE",    # flake8-pie
    # "SIM"     # flake8-simplify
    "TC",   # flake8-type-checking
    "PTH",  # flake8-use-pathlib
    "I",    # isort
    "N",    # pep8-naming
    "PERF", # Perflint
    # "D"     # pydocstyle
    "UP" # pyupgrade
]
ignore = ["N806"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "D"]

[tool.ruff.lint.isort]
force-single-line = true
known-first-party = ["src"]
lines-between-types = 1

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true

[dependency-groups]
dev = [
    "pre-commit>=4.6.1",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.22"
]
docs = [
    "mkdocs-autorefs>=1.4.4",
    "mkdocstrings-python>=2.0.5",
    "zensical>=0.0.51"
]
